added students interface

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
 			</div>
 		  </div>
 
+		  <div class ="container student-list-holder mt-5 border border-primary mb-5">
+			<div class="row student-headers border-bottom border-white p-3">
+				<div class="col-4 d-flex justify-content-center align-items-center">
+					Student's ID
+				</div>
+				<div class="col-4 d-flex justify-content-center align-items-center">
+				  Student's Name
+				</div>
+				<div class="col-4 d-flex justify-content-center align-items-center">
+				  Student's GPA
+				</div>
+			  </div>
+			  <div id = "student-info">
+
+			</div>
+		  </div>
+
 		<script src="./src/main.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
